add http server examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(example_echo example_echo.cpp)
 target_link_libraries(example_echo AsyncIO)
+
+add_executable(example_http_hello example_http_hello.cpp)
+target_link_libraries(example_http_hello AsyncIO)
