--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
+set(CMAKE_CXX_COMPILER /usr/bin/gcc-11)
+set(CMAKE_CXX_FLAGS "-Wall -lm -lstdc++")
 project(AsyncIO VERSION 0.1.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
