cmake test and example option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
-set(CMAKE_CXX_COMPILER /usr/bin/gcc-11)
-set(CMAKE_CXX_FLAGS "-Wall -lm -lstdc++")
 project(AsyncIO VERSION 0.1.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
-
-
 
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
   set(CMAKE_CXX_FLAGS "-fcolor-diagnostics ${CMAKE_CXX_FLAGS}")
@@ -25,9 +21,7 @@ macro(AddExternal target url git_tag)
   FetchContent_MakeAvailable(${target})
 endmacro()
 
-# AddExternal(AsyncTask; LEAVING-7/AsyncTask.git; v0.1.1)
-
-file(GLOB SOURCES 
+file(GLOB AsyncIO_SOURCES 
     "lib/*.cpp"
     "lib/sys/*.cpp"
     "lib/sys/unix/*.cpp"
@@ -35,7 +29,7 @@ file(GLOB SOURCES
 )
 
 add_library(AsyncIO STATIC)
-target_sources(AsyncIO PRIVATE ${SOURCES})
+target_sources(AsyncIO PRIVATE ${AsyncIO_SOURCES})
 target_include_directories(AsyncIO
     PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include
 )
@@ -50,8 +44,13 @@ if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
   set(CMAKE_CXX_FLAGS "-fsanitize=address ${CMAKE_CXX_FLAGS}") 
   target_compile_definitions(AsyncIO PRIVATE DEBUG)
 endif()
-
 add_subdirectory(submodule)
+option(AsyncIO_BUILD_TESTS "Build tests" OFF)
+option(AsyncIO_BUILD_EXAMPLES "Build examples" OFF)
 
-add_subdirectory(tests)
-add_subdirectory(examples)
+if(${AsyncIO_BUILD_TESTS})
+  add_subdirectory(tests)
+endif()
+if(${AsyncIO_BUILD_EXAMPLES})
+  add_subdirectory(examples)
+endif()
