--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,3 +6,6 @@ target_link_libraries(example_server AsyncIO)
 
 add_executable(example_client example_client.cpp)
 target_link_libraries(example_client AsyncIO)
+
+add_executable(example_ssl_client example_ssl_client.cpp)
+target_link_libraries(example_ssl_client AsyncIO)
